Fixed ul and li alignment.

--- a/src/index.css
+++ b/src/index.css
@@ -32,3 +32,9 @@ h4 {
 .sad-cart-icon {
     width: 1.5rem;
 }
+
+ul, li {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
